# dianxin_auto_train

./: .dockerignore  .env.example  .env.offline.example  .gitignore  Dockerfile  Dockerfile.ascend  Makefile  README.md  docker-compose.gpu.yml  docker-compose.npu.yml  docker-compose.yml  inference.py  main.py  pyproject.toml
.github/workflows/: docker-build-push-npu.yml  docker-build-push.yml
assets/: .gitignore
assets/1施工单位类型/: 施工单位类型_测试集.xlsx  施工单位类型_训练集.xlsx
assets/2空气污染/: 空气污染_测试集.xlsx
assets/3水体污染/: 水体污染_测试集.xlsx  水体污染_训练集.xlsx
assets/4噪声污染/: 噪声污染_测试集.xlsx  噪声污染_训练集.xlsx
assets/5辐射污染/: 辐射污染_测试集.xlsx  辐射污染_训练集.xlsx
docker/: entrypoint.ascend.sh
docs/: api.md  api_design.md  external_callback.md  lora_inference_api.md  offline_deployment.md  project_structure.md  training_api.md
legacy/: Bert_Train_Sample_V1.py  inference.py  环境保护_空气污染--样例1000.xlsx
scripts/: build_offline_bundle.sh  smoke_test.py
src/: callbacks.py  celery_app.py  check_service.py  config.py  database.py  device_utils.py  logging_utils.py  schemas.py  service_checker.py  settings.py  storage.py  tasks.py  worker_allocation.py
src/api/: app.py  app_simple.py
src/api/models/: requests.py  responses.py
src/api/routes/: health.py  inference.py  training.py  training_simple.py
src/core/: config.py  constants.py
src/inference/: __init__.py  service.py
src/ml/: dataset.py  model.py  trainer.py
src/models/: task.py
src/services/: storage.py  training.py  training_db.py  training_simple.py
src/training/: service.py
src/utils/: logger.py
src/workers/: tasks.py
