[project]
name = "dianxin-auto-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery",
    "click",
    "fastapi",
    "loguru",
    "modelscope>=1.31.0",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas",
    "peft",
    "python-dotenv",
    "redis",
    "requests",
    "scikit-learn",
    "torch",
    "tqdm",
    "transformers",
    "uvicorn[standard]",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
